# portfolio-project-previous

./: .gitignore  README.md
.devcontainer/: devcontainer.json
chapter2/: fantasy_data.db  league_data.csv  performance_data.csv  player_data.csv  readme.md  table_creation_ch2.sql  team_data.csv  team_player_data.csv
chapter3/: database.py  fantasy_data.db  models.py  performance_data.csv  readme.md  requirements.txt  test_crud.py  test_models.py
chapter3/complete/: crud.py  fantasy_data.db  requirements.txt  test_crud.py
chapter3/data/: performance_data.csv  player_data.csv
chapter4/: crud.py  main.py  readme.md  requirements.txt  schemas.py
chapter4/complete/: crud.py  database.py  main.py  readme.md  requirements.txt  test_crud.py  test_main.py
chapter5/: fantasy_data.db  main.py  readme.md  schemas.py  test_main.py
chapter5/complete/: main.py  models.py  requirements.txt  test_crud.py  test_main.py
chapter6/: crud.py  fantasy_data.db  main.py  readme.md  requirements.txt  test_crud.py  test_main.py
chapter6/complete/: .dockerignore  Dockerfile  crud.py  database.py  main.py  readme.md  requirements.txt
chapter7/: LICENSE  pyproject.toml  readme.md
chapter7/complete/sdk/: README.md  pyproject.toml
chapter7/complete/sdk/src/pyswc/tests/: test_logging.py  test_pyswc.py
chapter7/pyswc/: MANIFEST.in  __init__.py  readme.md  retries.py  setup.py  swc_client.py  swc_config.py
chapter7/pyswc/errors/: swc_error.py
chapter7/pyswc/schemas/: schemas.py  sdk_schemas.py
chapter7/pyswc/tests/: test_pyswc.py
chapter7/sdk/: README.md  pyproject.toml  pytest.ini
chapter7/sdk/bulk/: csv_to_parquet.py  league_data.csv  league_data.parquet  performance_data.csv  performance_data.parquet  player_data.csv  player_data.parquet  team_data.csv  team_data.parquet  team_player_data.csv  team_player_data.parquet
chapter7/sdk/src/pyswc/: __init__.py  swc_client.py  swc_config.py
chapter7/sdk/src/pyswc/errors/: __init__.py
chapter7/sdk/src/pyswc/schemas/: schemas.py
chapter7/sdk/src/pyswc/tests/: test_pyswc.py
chapter7/sdk/src/pyswc/tests/test_data_output/: teams_file.csv
chapter7/sdk/tests/: parque_data.ipynb  test_bulk_files.py  test_pyswc.py  test_pyswc_min.py
chapter7/sdk/tests/test_data_output/: players_file.csv
chapter7/src/pyswc/: requirements.txt
chapter7/src/pyswc/errors/: swc_error.py
sdk_testing/: LICENSE  README.md  pyproject.toml
