[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyswc"
version = "0.0.1"
authors = [
  { name="Ryan D", email="ryand@example.com" },
]
description = "A small example package with setuptools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
       'pytest>=8.1',
       'backoff>=2.2.1',
       'httpx>=0.27.0'
]


[project.urls]
Homepage = "https://github.com/Ryandaydev/test-pypi-packaging"
Issues = "https://github.com/Ryandaydev/test-pypi-packaging/issues"