[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PySWC"
version = "0.0.11"
authors = [
  {name="Ryan Day"},
]
description = "Example Software Development Kit (SDK) from Hands-On API Book for AI and Data Science"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
       'httpx>=0.27.0',
       'pydantic>=2.4.0,<2.5.0',
       'backoff>=2.2.1,<2.3.0',
]
